Fixcoverage table on mobile

--- a/src/app/modules/tables/components/table/scss/_bordered.scss
+++ b/src/app/modules/tables/components/table/scss/_bordered.scss
@@ -28,6 +28,16 @@
     }
   }
 
+  @include screen-xxs {
+    mat-cell,
+    mat-header-cell,
+    mat-footer-cell {
+      &:not(:last-of-type) {
+        border-right: none;
+      }
+    }
+  }
+
   .mat-row--cell-info-header {
     .app-cell--signal-strength {
       border-right: none;
